--- a/csharp/QRCodeGenerator/QRCodeGenerator.csproj
+++ b/csharp/QRCodeGenerator/QRCodeGenerator.csproj
@@ -35,10 +35,12 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitBuffer.cs" />
+    <Compile Include="DataTooLongException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QrCode.cs" />
     <Compile Include="QrSegment.cs" />
