--- a/csharp/QRCodeGenerator/QRCodeGenerator.csproj
+++ b/csharp/QRCodeGenerator/QRCodeGenerator.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QrCode.cs" />
     <Compile Include="QrSegment.cs" />
-    <Compile Include="Utils.cs" />
+    <Compile Include="QrUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
